change#3 research_page_fixed

--- a/research/index.html
+++ b/research/index.html
@@ -101,15 +101,15 @@
          	<h2><strong>Research</strong></h2> 
          	<ul>
          	<h3><strong>Current Research Topics</strong></h3> 
-         	<ul>
+         	<!-- <ul>
          	<p><a href="./Topic_1.html">Estimating Disease Burden of a Potential A(H7N9) Pandemic Influenza Outbreak in the United States</a></p>
          	<ul>
-         		bfwdbfsdfkjdfs
-         	</ul></ul><br />
+         		Research topics TBA
+         	</ul></ul><br /> -->
          	
-         	<p><a href="./Topic_2.html">Topic 2</a></p>
+         	<!-- <p><a href="./Topic_2.html">Topic 2</a></p>
          	<p><a href="./Topic_3.html">Topic 3</a></p>
-         	<p><a href="./Topic_4.html">Topic 4</a></p>
+         	<p><a href="./Topic_4.html">Topic 4</a></p> -->
 
 			</article>
 	<!-- Scroll to top -->
