--- a/students/index.html
+++ b/students/index.html
@@ -100,25 +100,25 @@
 <h2><strong>Currently serving as the doctoral dissertation advisor for the following students:&nbsp;&nbsp; </strong></h2>
 <ul>
 <img src="../assets/images/Walter.jpg"><br />
-<h3><strong>Walter Silva Sotillo</strong></h3>
-<p>Topic: <em>Influenza pandemic outbreak mitigation</em>.<br />
-Expected graduation August 2017.</ul></p><br />
+<h3><strong>Nicolas Bustos Villella</strong></h3>
+<p>Topic: <em>Object detection and synthetic image generation using CNN</em>.<br />
+Started Fall 2021</ul></p><br />
 <ul>
 <img src="../assets/images/Vignesh.jpg"><br />
-<h3><strong>Vignesh Subramanian</strong></h3>
-<p>Topic: Dynamic Pricing and Demand Response in Smart &amp; Connected Communities.<br />
-Started Fall 2014</p></ul><br />
+<h3><strong>Aadya Bhattarai</strong></h3>
+<p>Topic: Platooning and autonomous driving fuel consumption modelling<br />
+Started Fall 2022</p></ul><br />
 <ul>
 <img src="../assets/images/avatar.jpg"><br />
-<h3><strong>Hanisha Tatapudi</strong></h3>
-<p>Topic: Influenza Pandemic Outbreak Modeling.<br />
-Started Fall 2016</p></ul><br />
-<ul>
+<h3><strong>Krishna Rijal</strong></h3>
+<p>Topic: Renewable Energy and Power Market<br />
+Started Fall 2023</p></ul><br />
+<!-- <ul>
 <img src="../assets/images/Kevin.jpg"><br />
 <h3><strong>Kevin Melendez</strong></h3>
 <p>Topic: EV Transportation and Electric Power in S&amp;CC.<br />
 Started Fall 2016</p>
-</ul><br /><br />
+</ul><br /><br /> -->
 <p> </p>
 <h2><strong>Doctoral dissertation advisor for the following Ph.D. degree recipients:</strong></h2>
 <ul>
