--- a/students/index.html
+++ b/students/index.html
@@ -106,12 +106,12 @@ Started Fall 2021</ul></p><br />
 <ul>
 <img src="../assets/images/Vignesh.jpg"><br />
 <h3><strong>Aadya Bhattarai</strong></h3>
-<p>Topic: Platooning and autonomous driving fuel consumption modelling<br />
+<p>Topic: <em>Platooning and autonomous driving fuel consumption modelling</em><br />
 Started Fall 2022</p></ul><br />
 <ul>
 <img src="../assets/images/avatar.jpg"><br />
 <h3><strong>Krishna Rijal</strong></h3>
-<p>Topic: Renewable Energy and Power Market<br />
+<p>Topic: <em>Renewable integration and battery storgae in power grid</em><br />
 Started Fall 2023</p></ul><br />
 <!-- <ul>
 <img src="../assets/images/Kevin.jpg"><br />
