--- a/students/index.html
+++ b/students/index.html
@@ -111,7 +111,7 @@ Started Fall 2022</p></ul><br />
 <ul>
 <img src="../assets/images/avatar.jpg"><br />
 <h3><strong>Krishna Rijal</strong></h3>
-<p>Topic: <em>Renewable integration and battery storgae in power grid</em><br />
+<p>Topic: <em>Renewable integration and battery storage in power grid</em><br />
 Started Fall 2023</p></ul><br />
 <!-- <ul>
 <img src="../assets/images/Kevin.jpg"><br />
